@@ -1,4 +1,5 @@
 2017-11-19 Christina Zeller <chriz@keera.co.uk>:
+        * Adds lives for every catched diamond.
         * Adds 100 points for every catched diamond.
         * Adds proper image for diamonds (powerups).
 
